--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ body{
     width: 100vw;
     height: 100vh;
     margin: 0;
-    background-color: hsl(200, 50%, 12%);
+    background-color: hsl(0, 33%, 59%);
+}
+.person{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .head{
     background-color: hsl(19, 76%, 88%); 
@@ -26,6 +31,9 @@ body{
     display: flex;
     justify-content: space-between;/* these work on both as they separate them from each other */
 }
+.eyes{
+    transition-duration: 0.4s;
+}
 .eye{
     background-color: white;
     height: 35px;
@@ -38,6 +46,10 @@ body{
     align-items: center;
     overflow: hidden;/* hides the overflow of the color*/
     position: relative;
+}
+.eye:hover{
+    margin-top: 15px;
+    height: 0;
 }
 .eye::before{/* eye color */
     content: '';
@@ -65,6 +77,10 @@ body{
     border-top: 10px solid rgb(27, 27, 27);/* background color is not needed here, only a border that get a color and size*/
     border-radius: 100%;
     margin-bottom: 35px;
+    transition-duration: 0.3s;
+}
+.brow:hover{
+    transform: translateY(-30px);
 }
 .nose{
     position: absolute;
@@ -86,6 +102,12 @@ body{
     border-left-width: 1px;
     border-right-width: 1px;
     border-top-width: 2px;
+    transition-duration: 0.3s;
+}
+.mouth:hover{
+    width: 10px;
+    height: 20px;
+    background-color: hsl(19,46%,68%);
 }
 .ears{
     z-index: -1;/*moving the ears behind the head*/
@@ -108,7 +130,7 @@ body{
 .hair{
     position: absolute;
     width: 225px;
-    height: 100px;
+    height: 90px;
     background-color: hsl(27, 33%, 28%);
     margin-bottom: 300px;
     border-radius: 70% 100% 0 0;
@@ -119,7 +141,7 @@ body{
     background-color: hsl(27, 33%, 28%);
     height: 75px;
     width: 10px;
-    margin-top: 100px;
+    margin-top: 90px;
 }
 .hair::after{
     right: 0;
@@ -135,12 +157,87 @@ body{
     height: 20px;
     transform: rotate(45deg);
     background-color: hsl(27, 33%, 28%);
-    top: 92px;
+    top: 82px;
     left: 5px;
 }
 .hair-corner::after{
     left:initial;
     right: 5px;
     transform: rotate(-45deg);
+}
+.neck{
+    z-index: -1;
+    position: absolute;
+    width: 80px;
+    height: 70px;
+    background-color: hsl(19, 76%, 88%); 
+    bottom: 95px;
+    border-radius: 0 0 25% 25%;
+}
+.neckline{
+    position: absolute;
+    width: 120px;
+    height: 50px;
+    border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	border-top: 50px solid hsl(19, 76%, 88%);
+    top: 170px;
+    overflow: hidden;
+}
+.torso{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.shirt{
+    z-index: -2;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(99, 99, 202);
+    width: 250px;
+    height: 150px;
+    border-radius: 50% 50% 0 0;
+    top: 165px;
+}
+.walls{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.wallline-1{
+    z-index: -2;
+    content: '';
+    position: absolute;
+    height: 450px;
+    width: 2px;
+    background-color: black;
+    bottom: 230px;
+    left: 250px;
+}
+.wallline-2{
+    z-index: -2;
+    content: '';
+    position: absolute;
+    height: 190px;
+    width: 2px;
+    background-color: black;
+    bottom: 110px;
+    left: 341px;
+    transform: rotate(105deg);
+}
+.wallline-3{
+    z-index: -2;
+    content: '';
+    position: absolute;
+    height: 477px;
+    width: 2px;
+    background-color: black;
+    left: 19px;
+    margin-bottom: 332px;
+    transform: rotate(-105deg);
 }
 /* position absolute is used everywhere so that the containers can stack on each other*/
