--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
-@keyframes lift{
-    0%{transform: translateY(0px);}
-    50%{transform: translateY(-150px);}
-    100%{transform: translateY(0px);}
+@keyframes colorchange {
+    0%{background-color: blue;}
+    20%{background-color: green;}
+    40%{background-color: lightblue;}
+    60%{background-color: blue;}
+    80%{background-color: purple;}
+    100%{background-color: brown;}
+    
 }
-@keyframes upperlift{
-    0%{transform: rotate(-40deg);}
-    50%{transform: rotate(-60deg);}
-    100%{transform: rotate(-40deg);}
+@keyframes eyesmove{
+    0%{margin-right: 5px;}
+    50%{margin-left: 15px;
+        margin-right: 0;}
+    100%{margin-right: 15px;}
+}
+@keyframes wave{
+    0%{transform: rotate(0deg);}
+    50%{transform: rotate(-30deg);}
+    100%{transform: rotate(0deg);}
 }
 *, *::before, *::after{
     box-sizing: border-box;
@@ -19,6 +29,7 @@ body{
     height: 100vh;
     margin: 0;
     background-color: hsl(0, 33%, 59%);
+    overflow: hidden;
 }
 .person{
     display: flex;
@@ -80,6 +91,7 @@ body{
     border-radius: 100%;
     margin-right: 15px;
     margin-bottom: 7px;
+    animation: eyesmove 2000ms infinite;
 }
 .brow{
     width: 65px;
@@ -212,6 +224,7 @@ body{
     height: 213px;
     border-radius: 50% 50% 0 0;
     top: 165px;
+    animation: colorchange 5000ms infinite;
 }
 .walls{
     position: absolute;
@@ -255,46 +268,68 @@ body{
     position: absolute;
     height: 200px;
     width: auto;
-    animation: lift 2s infinite;
     left: 130px;
     top: 70px;
     transform: rotate(10deg);
 }
-.hand{
+.hands{
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .shoulder{
     position: absolute;
     height: 30px;
-    width: 40px;
+    width: 50px;
     background-color: rgb(99, 99, 202);
-    top: 180px;
     border-radius: 100% 100% 0 0;
-    transform: rotate(-40deg);
-    left: 80px;
-    animation: upperlift 2s infinite;
+    animation: colorchange 5000ms infinite;
 }
 .upperarm{
     position: absolute;
     width: 40px;
     height: 140px;
     background-color: hsl(19, 76%, 88%); 
-    border-radius: 10%;
-    top: 186px;
-    left: 135px;
-    transform: rotate(-40deg);
-    animation: upperlift 2s infinite;
+    border-radius: 10% 10% 20% 20%;
 }
 .forearm{
     position: absolute;
     width: 40px;
     height: 140px;
     background-color: hsl(19, 76%, 88%); 
-    border-radius: 10%;
+    border-radius: 10% 10% 30% 30%;
+}
+.shoulder-1{
     top: 180px;
+    left: 80px;
+    transform: rotate(-40deg);
+}
+.shoulder-2{
+    top: 180px;
+    right: 80px;
+    transform: rotate(40deg);
+}
+.upperarm-1{
+    top: 187px;
+    left: 145px;
+    transform: rotate(-40deg);
+}
+.upperarm-2{
+    top: 187px;
+    right: 145px;
+    transform: rotate(40deg);
+}
+.forearm-1{
+    top: 177px;
     left: 190px;
     transform: rotate(10deg);
-    animation: lift 2s infinite;
+}
+.forearm-2{
+    top: 177px;
+    right: 190px;
+    transform-origin: bottom;
+    animation: wave 1000ms infinite;
 }
 
 /* position absolute is used everywhere so that the containers can stack on each other*/
